--- a/airquayRowing/src/main/test/Main.html
+++ b/airquayRowing/src/main/test/Main.html
@@ -125,8 +125,8 @@
     </div>
     <div class="container">
         <form name="rtcForm">
-            <input id="infrontRaceNum" align="left" type="text" size="2"
-            readonly="readonly" value="Race" /> <input id="raceNumber"
+            <input id="infrontrace_num" align="left" type="text" size="2"
+            readonly="readonly" value="Race" /> <input id="race_number"
             type="text" size="1" readonly="readonly" value="5" /> <input
             type="text" size="4" id="status" value=" 경기중 " readonly="readonly" />
             <input type="text" size="130" id="blank" readonly="readonly" /> <input
@@ -137,7 +137,7 @@
     </div>
     <table id="info" align="center">
         <tr>
-            <th>StartTime</th>
+            <th>start_time</th>
             <th>Event</th>
             <th>Round</th>
             <th>1</th>
@@ -149,8 +149,8 @@
             <th>Prog.</th>
         </tr>
         <tr>
-            <td id="raceStartTime">10:22</td>
-            <td id="eventName">M4x</td>
+            <td id="racestart_time">10:22</td>
+            <td id="event_name">M4x</td>
             <td id="roundName">Heat1</td>
             <td id="firstLane">대전</td>
             <td id="secondLane">서울</td>
